Altered method to generate Paths